Complate user and authication

--- a/ecommerce-back-end/.env
+++ b/ecommerce-back-end/.env
@@ -5,7 +5,7 @@ APP_HOST_EMAIL = wagolemusa@gmail.com
 accountSid = AC28c54c2e3af577c64566d45813e7eb1b
 authToken = bd7a910b5fbc3793a861e0f6e57977b7
 APP_DOMAIN = http://localhost:5000/
-APP_SECRET = 1234567890
+APP_SECRET = REFUGEWISE
 APP_PORT=5000 
 CLOUD_NAME = xycoders 
 API_KEY = 837887428819121
