--- a/ecommerce-back-end/package.json
+++ b/ecommerce-back-end/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "slugify": "^1.6.5"
   }
 }
