--- a/ecommerce-back-end/.env
+++ b/ecommerce-back-end/.env
@@ -4,7 +4,7 @@ HOST_NUMBER = +13134665897
 APP_HOST_EMAIL = wagolemusa@gmail.com
 accountSid = AC28c54c2e3af577c64566d45813e7eb1b
 authToken = bd7a910b5fbc3793a861e0f6e57977b7
-APP_DOMAIN = http://localhost:5000/
+APP_DOMAIN = http://localhost:5000
 APP_SECRET = REFUGEWISE
 APP_PORT=5000 
 CLOUD_NAME = xycoders 
